--- a/skincare/src/main/AndroidManifest.xml
+++ b/skincare/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
         android:theme="@style/Theme.Jetpackcompose">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Jetpackcompose">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
