--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
-        nav_version = "2.5.1"
+        compose_version = '1.3.2'
+        nav_version = "2.5.3"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
