--- a/skincare/build.gradle
+++ b/skincare/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.zrcoding.compose"
@@ -50,7 +50,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
 
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:1.4.0-alpha03"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     implementation 'androidx.activity:activity-compose:1.6.1'
