--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.3.2'
-        nav_version = "2.5.3"
+        dep_core = '1.9.0'
+        dep_compose = '1.4.0-alpha05'
+        dep_constraint_layout = '1.0.1'
+        dep_view_pager = '0.29.0-alpha'
+        dep_activity = '1.6.1'
+        dep_material = '1.4.0-alpha05'
+        dep_lifecycle = '2.5.1'
+        dep_navigation = "2.5.3"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
