--- a/skincare/build.gradle
+++ b/skincare/build.gradle
@@ -36,7 +36,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion dep_compose
     }
     packagingOptions {
         resources {
@@ -46,28 +46,33 @@ android {
 }
 
 dependencies {
+    // core
+    implementation "androidx.core:core-ktx:$dep_core"
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    // ui
+    implementation "androidx.compose.ui:ui:$dep_compose"
+    implementation "androidx.compose.material:material:$dep_material"
+    implementation "androidx.compose.ui:ui-tooling-preview:$dep_compose"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$dep_constraint_layout"
 
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:1.4.0-alpha03"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    // activity
+    implementation "androidx.activity:activity-compose:$dep_activity"
+    // lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$dep_lifecycle"
 
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-
-    implementation("androidx.navigation:navigation-compose:$nav_version")
+    // navigation
+    implementation "androidx.navigation:navigation-compose:$dep_navigation"
 
     // experimental
-    implementation "com.google.accompanist:accompanist-pager:0.24.12-rc"
+    implementation "com.google.accompanist:accompanist-pager:$dep_view_pager"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$dep_view_pager"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$dep_compose"
 
-
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    // activity
+    debugImplementation "androidx.compose.ui:ui-tooling:$dep_compose"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$dep_compose"
 }
