--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,19 @@
 buildscript {
     ext {
-        dep_core = '1.9.0'
-        dep_compose = '1.4.0-alpha05'
-        dep_constraint_layout = '1.0.1'
+        dep_core_ktx = '1.9.0'
+        dep_compose_compiler = '1.4.0'
+        dep_compose = '1.3.3'
+        dep_constraintlayout = '1.0.1'
         dep_view_pager = '0.29.0-alpha'
         dep_activity = '1.6.1'
-        dep_material = '1.4.0-alpha05'
-        dep_lifecycle = '2.5.1'
+        dep_lifecycle_runtime_ktx = '2.5.1'
         dep_navigation = "2.5.3"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 task clean(type: Delete) {
