--- a/skincare/src/main/AndroidManifest.xml
+++ b/skincare/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Jetpackcompose">
+        android:theme="@style/Theme.Skincare">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
