--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,19 @@ buildscript {
         dep_core_ktx = '1.9.0'
         dep_compose_compiler = '1.4.0'
         dep_compose = '1.3.3'
+        dep_material = '1.4.0-rc01'
         dep_constraintlayout = '1.0.1'
         dep_view_pager = '0.29.0-alpha'
-        dep_activity = '1.6.1'
+        dep_activity = '1.8.0-alpha02'
         dep_lifecycle_runtime_ktx = '2.5.1'
+        dep_lifecycle_ext = '2.2.0'
         dep_navigation = "2.5.3"
+        dep_hilt_navigation = "1.0.0"
+        dep_hilt = '2.44'
+        dep_datastore = '1.0.0'
+    }
+    dependencies {
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$dep_hilt")
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
