--- a/skincare/build.gradle
+++ b/skincare/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -9,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.zrcoding.compose"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -23,6 +25,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    flavorDimensions "type"
+    productFlavors {
+        mock {
+            dimension "type"
+        }
+        real {
+            dimension "type"
         }
     }
     compileOptions {
@@ -46,22 +57,29 @@ android {
 }
 
 dependencies {
-    // Code
+    // project dependencies
+    implementation project(":common")
+
+    // Core
     implementation "androidx.core:core-ktx:$dep_core_ktx"
 
     // UI
     implementation "androidx.compose.ui:ui:$dep_compose"
-    implementation "androidx.compose.material:material:1.4.0-alpha05"
+    implementation "androidx.compose.material:material:$dep_material"
     implementation "androidx.compose.ui:ui-tooling-preview:$dep_compose"
     implementation "androidx.constraintlayout:constraintlayout-compose:$dep_constraintlayout"
 
+    // Splash screen
+    implementation 'androidx.core:core-splashscreen:1.1.0-alpha01'
     // Activity
     implementation "androidx.activity:activity-compose:$dep_activity"
     // LifeCycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$dep_lifecycle_runtime_ktx"
+    implementation "androidx.lifecycle:lifecycle-extensions:$dep_lifecycle_ext"
 
     // Navigation
-    implementation("androidx.navigation:navigation-compose:$dep_navigation")
+    implementation "androidx.navigation:navigation-compose:$dep_navigation"
+    implementation "androidx.hilt:hilt-navigation-compose:$dep_hilt_navigation"
 
     // ViewPager
     implementation "com.google.accompanist:accompanist-pager:$dep_view_pager"
@@ -76,4 +94,13 @@ dependencies {
     // Tools
     debugImplementation "androidx.compose.ui:ui-tooling:$dep_compose"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$dep_compose"
+
+    // di: hilt
+    implementation("com.google.dagger:hilt-android:$dep_hilt")
+    kapt("com.google.dagger:hilt-android-compiler:$dep_hilt")
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
