feat: Created data module + add models + add mock implementation.

--- a/skincare/build.gradle
+++ b/skincare/build.gradle
@@ -59,6 +59,7 @@ android {
 dependencies {
     // project dependencies
     implementation project(":common")
+    implementation project(":data")
 
     // Core
     implementation "androidx.core:core-ktx:$dep_core_ktx"
