--- a/skincare/build.gradle
+++ b/skincare/build.gradle
@@ -99,6 +99,13 @@ dependencies {
     // di: hilt
     implementation("com.google.dagger:hilt-android:$dep_hilt")
     kapt("com.google.dagger:hilt-android-compiler:$dep_hilt")
+
+    // JUnit framework
+    testImplementation "junit:junit:$dep_junit"
+    // Mockk framework
+    testImplementation "io.mockk:mockk:$dep_mockk"
+    // Coroutines framework
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 }
 
 // Allow references to generated code
