perf: Used libraries latest stable versions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-depCoreKtx = "1.12.0-alpha05"
+depCoreKtx = "1.10.1"
 depCoreSplashscreen = "1.0.1"
-depCompose = "1.6.0-alpha01"
-depMaterial = "1.6.0-alpha01"
+depCompose = "1.5.0"
+depMaterial = "1.5.0"
 depConstraintlayout = "1.0.1"
 depCoil = "2.4.0"
 depLottie = "6.1.0"
-depActivity = "1.8.0-alpha06"
+depActivity = "1.7.2"
 depLifecycleRuntimeKtx = "2.6.1"
 depLifecycleExt = "2.2.0"
-depNavigationCompose = "2.6.0"
+depNavigationCompose = "2.7.0"
 depHiltNavigationCompose = "1.0.0"
 depJunit = "4.13.2"
 depJunitExt = "1.1.5"
